docs/styles.css
@font-face {
  font-family: "Raleway";
  src: url("./assets/fonts/Raleway-VariableFont_wght.ttf") format("truetype");
  font-style: normal;
}

@font-face {
  font-family: "Raleway";
  src: url("./assets/fonts/Raleway-Italic-VariableFont_wght.ttf") format("truetype");
  font-style: italic;
}

@font-face {
  font-family: "Source Code Pro";
  src: url("./assets/fonts/SourceCodePro-VariableFont_wght.ttf") format("truetype");
  font-style: normal;
}

@font-face {
  font-family: "Source Code Pro";
  src: url("./assets/fonts/SourceCodePro-Italic-VariableFont_wght.ttf") format("truetype");
  font-style: italic;
}

html {
  font-size: 16px;
  font-family: "Source Code Pro", Courier, monospace;
}

body {
 /*  background: linear-gradient(135deg, #5f6eff, #feb47b); */
  margin: 0;
}

a {
  text-decoration: none;
  color: black;
}

hr {
  width: 100%;
  height: 0px;
  border: none;
  border-top: 1px solid gray;
}

figcaption {
  color: gray;
  margin-top: 1.5rem;
  font-family: "Raleway", "Source_Code_Pro", monospace;
}

/* home page */

.nav-bar {
  display: flex;
  justify-content: space-between;
  font-family: "Raleway", "Source_Code_Pro", monospace;
  font-size: 1.5rem;
  padding: 1rem;
}

.nav-bar-name {
  font-weight: 800;
  font-size: 2rem;
  font-style: italic;
}

.nav-items {
  display: flex;
  gap: 18px;
}

.face-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.face {
  height: 1200px;
  transition: transform 0.1s linear;
  /* Smooth out the rotation */
  position: relative;
  bottom: 50px;
}

/* projects */

.projects-title {
  text-align: center;
  font-size: 3rem;
  font-weight: 300;
  visibility: hidden;
}

.project-title {
  font-weight: 600;
}

.projects-grid {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-template-rows: repeat(6, 1fr);
  justify-items: center;
  margin: auto;
  width: 1600px;
  justify-content: center;
}

.grid-item {
  display: flex;
  align-items: center;
  gap: 50px;
  margin-bottom: 4rem;
}

.even {
  flex-direction: row-reverse;
}

.projects-text-container {
  width: 800px;
  font-size: 1.5rem;
  font-weight: 300;
}

.case-study-link {
  text-decoration: underline;
}

.projects-icons-container {
  display: flex;
  width: 128px;
  justify-content: space-between;
  align-items: center;
  height: 2.1rem;
}

.embed {
  height: 2rem;
}

.embed:hover {
  height: 2.1rem;
  cursor: pointer;
}

.demo {
  background-color: white;
  border-radius: 5px;
  height: 2rem;
}

.demo:hover {
  height: 2.1rem;
  cursor: pointer;
}

.mockup {
  height: 31rem;
}

.mockup-adjust {
  height: 26rem;
}

/* about page */

.about-main-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 1450px;
  margin: auto;
}

.about-text {
  margin-bottom: 3rem;
  font-size: 1.5rem;
  font-weight: 200;
}

.about-me-likes-container-odd {
  display: flex;
  align-items: center;
  gap: 3rem;
}

.about-me-likes-container-even {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  gap: 3rem;
}

.coffee {
  height: 14rem;
}

.jazz-record {
  height: 16rem;
}

.soup {
  height: 18rem;
}

.download-button {
  background-color: #007bff;
  padding: 0.5rem 1rem;
  font-size: 1rem;
  color: white;
  border-radius: 5px;
  border: none;
  font-weight: 100;
  font-family: "Source Code Pro";
  margin-bottom: 3rem;
}

.download-button-container,
.arrow-up-container {
  display: flex;
  justify-content: center;
}

/* footer */

.arrow-up {
  height: 3rem;
  margin-bottom: 1rem;
}

/* case studies */

.case-study-title {
  text-align: center;
  font-size: 4rem;
  font-weight: 300;
  margin-bottom: 1rem;
}

.case-study-full-width-image {
  width: 100vw;
}

.typewriter h1 {
  color: #fff;
  overflow: hidden;
  /* Ensures the content is not revealed until the animation starts*/
  white-space: nowrap;
  /* Keeps the content on a single line */
  margin: 0 auto;
  /* Gives that scrolling effect as the typing happens */
  letter-spacing: 0.15em;
  animation: typing 3.5s steps(30, end), blink-caret 0.5s step-end infinite;
  width: 100%;
  text-align: center;
}

@keyframes typing {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

/* The typewriter cursor effect */
@keyframes blink-caret {

  from,
  to {
    border-color: transparent;
  }

  50% {
    border-color: orange;
  }
}

.case-study-text-container {
  width: 80%;
  margin: 0 auto;
}

.case-study-text {
  font-size: 1.5rem;
  font-weight: 200;
  margin-bottom: 3rem;
}

.title-two {
  font-size: 2.5rem;
  font-weight: 400;
}

.title-three {
  font-size: 2rem;
  font-weight: 300;
}

.case-study-logos-container {
  display: flex;
}

.case-study-logos {
  width: 50%;
  margin: auto;
}

.case-study-floating-screen {
  width: 80%;
  margin: auto;
  box-shadow: 12px 12px 29px #555;
  margin-top: 3rem;
}

.case-study-floating-screen-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* chit chat */

.chitchat-ui-design,
.chitchat-gif-container {
  display: flex;
  justify-content: center;
}

.chitchat-gif {
  width: 375px;
  border: solid 1px black;
}

/* contact */

.wrapper {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.form-text {
  font-size: 1.5rem;
  font-weight: 300;
}

.form-button {
  text-align-last: center;
  display: inline-block;
  padding: 10px 20px;
  height: 56px;
}

.message-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.success-message {
  width: 100%;
  background-color: green;
  color: white;
  height: 56px;
  border-radius: 5px;
  font-family: "RALEWAY";
  font-size: 1.5rem;
}

.error-message {
  width: 100%;
  background-color: red;
  color: white;
  height: 56px;
  border-radius: 5px;
  font-family: "RALEWAY";
  font-size: 1.5rem;
}

.social-media-icons {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  margin-bottom: 1rem;
}

.contact-icons {
  height: 3rem;
}

/* media queries */
@media (min-width: 1536px) {
  .about-main-container {
    width: 1450px;
  }

  .projects-grid {
    width: 1450px;
  }
}

@media (min-width: 1280px) and (max-width: 1535px) {
  html {
    font-size: 16px;
  }

  .about-main-container,
  .projects-grid {
    width: 1200px;
  }

  .grid-item {
    flex-direction: column;
  }

  .face {
    height: 800px;
  }
}

@media (min-width: 1024px) and (max-width: 1279px) {
  .about-main-container {
    width: 950px;
  }

  .projects-grid {
    display: flex;
    flex-direction: column;
    width: 950px;
  }

  .grid-item {
    flex-direction: column;
    gap: 0;
    height: 100vh;
  }

  .projects-text-container {
    width: 90%;
  }

  .mockup {
    height: 48vh;
    margin-bottom: 5rem;
  }

  .mockup-adjust {
    height: 44vh;
    margin-bottom: 6rem;
  }

  .flowerheads,
  .chitchat,
  .mello {
    height: 50vh !important;
  }

  .yariga {
    height: 48vh !important;
  }

  .yariga-grid {
    margin-bottom: 0;
  }

  .face {
    height: 900px;
  }
}

@media (min-width: 768px) and (max-width: 1023px) {
  html {
    font-size: 16px;
  }

  .projects-grid {
    width: 700px;
  }

  .grid-item {
    flex-direction: column;
    gap: 0;
    height: 100vh;
  }

  .projects-text-container {
    width: 80%;
  }

  .face {
    height: 700px;
  }

  .about-main-container {
    width: 700px;
  }

  .about-me-likes-container-even,
  .about-me-likes-container-odd {
    flex-direction: column;
  }

  .mockup {
    height: 44vh;
    margin-bottom: 5rem;
  }

  .mockup-adjust {
    height: 40vh;
    margin-bottom: 6rem;
  }

  .flowerheads,
  .chitchat,
  .mello,
  .yariga {
    height: 44vh !important;
  }

  .yariga-grid {
    margin-bottom: 0;
  }
}

@media (min-width: 576px) and (max-width: 767px) {
  html {
    font-size: 12px;
  }

  .projects-grid {
    width: 510px;
  }

  .grid-item,
  .grid-item-even {
    flex-direction: column;
    gap: 0;
    margin-bottom: 2rem;
  }

  .projects-text-container,
  .about-main-container {
    width: 90%;
  }

  .face {
    height: 500px;
  }

  .about-me-likes-container-even,
  .about-me-likes-container-odd {
    flex-direction: column;
    gap: 1rem;
  }

  .about-text {
    margin-bottom: 2rem;
  }
}

@media (max-width: 575px) {
  html {
    font-size: 12px;
  }

  .projects-grid {
    display: flex;
    flex-direction: column;
    width: 90%;
    margin-bottom: 5rem;
    gap: 6rem;
  }

  .grid-item,
  .grid-item-even {
    flex-direction: column;
    gap: 0;
    margin-bottom: 2rem;
  }

  .projects-text-container,
  .about-main-container {
    width: 90%;
  }

  .projects-icons-container {
    width: 90px;
  }

  .face {
    height: 400px;
  }

  .about-me-likes-container-even,
  .about-me-likes-container-odd {
    flex-direction: column;
    gap: 1rem;
  }

  .about-text {
    margin-bottom: 2rem;
  }

  .mockup {
    height: 33rem;
  }

  .mockup-adjust {
    width: 90vw;
  }

  .yariga {
    height: 31vh;
  }

  .case-study-title {
    font-size: 3rem;
  }

  .success-message,
  .error-message {
    font-size: 1.3rem;
  }
}

@media (max-width: 500px) {
  html {
    font-size: 12px;
  }

  .nav-items {
    gap: 10px;
  }

  .nav-bar-name {
    font-size: 1.5rem;
  }

  .face {
    width: 400px;
  }

  .mockup-adjust {
    width: 95vw;
    height: unset;
  }
}

@media (max-width: 400px) {
  .face {
    width: 360px;
  }
  .mockup {
    height: 25rem;
  }
  .yariga {
    height: 27vh;
  }
}

